[gd_scene load_steps=9 format=3 uid="uid://ceoqtlfuehsvd"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_osaxm"]
[ext_resource type="PackedScene" uid="uid://b8opucxucl032" path="res://world/world.tscn" id="2_unfjm"]
[ext_resource type="Theme" uid="uid://3t61g0061mea" path="res://assets/theme.tres" id="5_5yrco"]
[ext_resource type="Script" path="res://ui/Message.gd" id="7_y3mfw"]
[ext_resource type="Texture2D" uid="uid://bxqvi5615lj3b" path="res://assets/trident.png" id="8_gw5hb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wp2ga"]
bg_color = Color(0.0784314, 0.0745098, 0.0588235, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c6hay"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u2eju"]

[node name="Main" type="Node2D"]
script = ExtResource("1_osaxm")

[node name="World" parent="." instance=ExtResource("2_unfjm")]

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 2
visible = false

[node name="Panel" type="PanelContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_5yrco")
theme_override_styles/panel = SubResource("StyleBoxFlat_wp2ga")

[node name="MarginContainer" type="MarginContainer" parent="UI/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TurnLabel" type="Label" parent="UI/Panel/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Turn 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnContainer" type="HBoxContainer" parent="UI/Panel/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Message" type="Label" parent="UI/Panel/MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
script = ExtResource("7_y3mfw")

[node name="SacrificeContainer" type="HBoxContainer" parent="UI/Panel/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel/MarginContainer/HBoxContainer/HBoxContainer/SacrificeContainer"]
layout_mode = 2

[node name="SacrificeLabel" type="Label" parent="UI/Panel/MarginContainer/HBoxContainer/HBoxContainer/SacrificeContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SacrificeIcon" type="TextureRect" parent="UI/Panel/MarginContainer/HBoxContainer/HBoxContainer/SacrificeContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_gw5hb")
stretch_mode = 5

[node name="SacrificeButton" type="Button" parent="UI/Panel/MarginContainer/HBoxContainer/HBoxContainer/SacrificeContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_c6hay")
text = "Sacrifice"
icon_alignment = 2

[node name="TurnButton" type="Button" parent="UI/Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2eju")
text = "End Turn"

[node name="SelectionUI" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="PanelContainer" type="PanelContainer" parent="SelectionUI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_5yrco")
theme_override_styles/panel = SubResource("StyleBoxFlat_wp2ga")

[node name="MarginContainer" type="MarginContainer" parent="SelectionUI/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="SelectionUI/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Players: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TeamNum" type="SpinBox" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 2.0
max_value = 7.0
value = 7.0
rounded = true
alignment = 1

[node name="GenerateBtn" type="Button" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Generate another map"

[node name="PlayBtn" type="Button" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Play this map"

[node name="MapEditorUI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="PanelContainer" type="PanelContainer" parent="MapEditorUI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_5yrco")
theme_override_styles/panel = SubResource("StyleBoxFlat_wp2ga")

[node name="MarginContainer" type="MarginContainer" parent="MapEditorUI/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="GridContainer" parent="MapEditorUI/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlaceTeamBtn" type="Button" parent="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Make Team"

[node name="PlaceTeamNum" type="SpinBox" parent="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 7.0
value = 1.0
rounded = true
alignment = 1

[node name="DrawBtn" type="Button" parent="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Draw Tile"

[node name="EraseBtn" type="Button" parent="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Erase Tile"

[node name="ResetBtn" type="Button" parent="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Reset Island"

[node name="RegionsBtn" type="Button" parent="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Generate Regions"

[node name="HBoxContainer2" type="HBoxContainer" parent="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="SaveBtn" type="Button" parent="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Save Map"

[node name="LoadBtn" type="Button" parent="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Load Saved Map"

[node name="PlayBtn" type="Button" parent="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Play Map"

[node name="CenterBtn" type="Button" parent="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Center"

[connection signal="pressed" from="UI/Panel/MarginContainer/HBoxContainer/HBoxContainer/SacrificeContainer/SacrificeButton" to="." method="_on_sacrifice_button_pressed"]
[connection signal="pressed" from="UI/Panel/MarginContainer/HBoxContainer/TurnButton" to="." method="_on_turn_button_pressed"]
[connection signal="value_changed" from="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/TeamNum" to="." method="_on_team_num_value_changed"]
[connection signal="pressed" from="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/GenerateBtn" to="." method="_on_generate_btn_pressed"]
[connection signal="pressed" from="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/PlaceTeamBtn" to="." method="_on_place_team_btn_pressed"]
[connection signal="value_changed" from="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/PlaceTeamNum" to="." method="_on_place_team_num_value_changed"]
[connection signal="pressed" from="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/DrawBtn" to="." method="_on_draw_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/EraseBtn" to="." method="_on_erase_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/ResetBtn" to="." method="_on_reset_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/RegionsBtn" to="." method="_on_regions_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2/SaveBtn" to="." method="_on_save_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2/LoadBtn" to="." method="_on_load_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2/CenterBtn" to="." method="_on_center_btn_pressed"]
